Edits and Updates cat's information

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
    Node js tutorial
-   <a href="/cats/create">Create Cat</a>
-   <a href="/cats">Cat Index</a>
+    </br>
+   <a href="/cats/create">Create Cat</a></br>
+   <a href="/cats">Cat Index</a></br>
 </body>
 </html>
